# gator

./: .binstar.yml  .copier-answers.yml  .dockerignore  .eslintignore  .eslintrc.js  .flake8  .gitignore  .lintstagedrc  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .travis.yml  .yarnrc-lab3.yml  .yarnrc-lab4.yml  .yarnrc.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  appveyor.yml  conftest.py  docker-compose.yml  environment.yml  eslint-base.js  eslint.config.js  install-lab-version.sh  install.json  lerna.json  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tsconfig-base.json  tsconfig.eslint.json  tsconfig.json  (+2 more)
.continous-integration/: install-miniconda.ps1
.github/: issue_template.md  pull_request_template.md
.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml  navigator.yml  pr-rtd-link.yml  publish.yml  pypi-publish.yml  test-pypi-publish.yml
app/: .eslintrc.js  README.md  environment.yml  main.py  package.json
app/src/: index.ts  svg.d.ts
app/src/plugins/navigator/: index.ts  index.tsx
app/src/plugins/paths/: index.ts
app/src/plugins/top/: index.ts  index.tsx  menu.ts
app/style/: index.css
app/templates/: index.html
binder/: environment.yml  jupyter_notebook_config.py  jupyter_server_config.py  postBuild  workspace.json
conda.recipe/: bld.bat  build.sh  meta.yaml  package.json  post-link.bat  post-link.sh  pre-unlink.bat  pre-unlink.sh  run_test.bat  run_test.py  run_test.sh  setup.cfg
condaenvs/: setup.py
condaenvs/nbextension/static/: main.js  tree.js
docs/source/: changelog.md  conf.py  features.md  getting-started.md  index.md  index.rst
docs/source/_static/: custom.css
docs/source/api/: index.md
docs/source/user-guide/: features.md  getting-started.md  index.md
e2e-tests/: Dockerfile  conftest.py  docker-compose.yml  run_e2e.sh  test_e2e.py
exploration/: dag.html  strat_data.js  tree.html  tree_data.js  tree_data.json
jupyter-config/jupyter_notebook_config.d/: jupyter_conda.json  mamba_gator.json
jupyter-config/jupyter_server_config.d/: mamba_gator.json
jupyter-config/nbconfig/notebook.d/: jupyter_conda.json  mamba_gator.json
jupyter-config/nbconfig/tree.d/: jupyter_conda.json  mamba_gator.json
jupyter_conda/: __init__.py  __main__.py  _version.py  config.py  envmanager.py  handlers.py  log.py  rest_api.yml  server.py
jupyter_conda/labextension/: jupyterlab_conda-2.2.4.tgz
jupyter_conda/navigator/: main.py
jupyter_conda/navigator/static/: 0.navigator.bundle.js  1.navigator.bundle.js  2.navigator.bundle.js
jupyter_conda/navigator/templates/: index.html
jupyter_conda/nbextension/: urls.js
jupyter_conda/static/: common.js  conda.css  main.js  models.js  views.js
jupyter_conda/tests/: test_actionsstack.py  test_api.py  test_notebook.py  test_utils.py  utils.py
jupyter_conda/tests/js/: _utils.js  test_notebook_basic.js
jupyter_data_dir/nbserverextensions/condaenvs/: .binstar.yml  conda_env_config.py  setup.py
jupyter_data_dir/nbserverextensions/condaenvs/conda.recipe/: build.sh  meta.yaml  post-link.sh
jupyter_data_dir/nbserverextensions/condaenvs/condaenvs/: _version.py  install.py
jupyter_data_dir/nbserverextensions/condaenvs/condaenvs/nbextension/: handlers.py
jupyter_data_dir/nbserverextensions/condaenvs/condaenvs/nbextension/static/: models.js  tab.html
labextension/: README.md  babel.config.js  jest.config.js  package-lock.json  package.json  setup.py  tsconfig.json
labextension/schema/: plugin.json
labextension/scripts/: jest-transform.js
labextension/src/: CondaEnvWidget.tsx  constants.ts  icon.ts  index.ts  models.ts  services.ts  tokens.ts  tour.tsx  validator.ts
labextension/src/__tests__/: services.spec.ts
labextension/src/components/: CondaEnv.tsx  CondaEnvItem.tsx  CondaEnvList.tsx  CondaEnvToolBar.tsx  CondaPkgItem.tsx  CondaPkgList.tsx  CondaPkgPanel.tsx  CondaPkgStatusBar.tsx  CondaPkgToolBar.tsx  DotsLoader.tsx  NbConda.tsx  globalStyles.ts
labextension/src/styles/: CondaEnvStyles.ts
labextension/style/: index.css
mamba_gator/: __init__.py  __main__.py  _version.py  envmanager.py  handlers.py  log.py  rest_api.yml  server.py
mamba_gator/navigator/: README.md  index.html  main.js  main.py  tree.js
mamba_gator/navigator/templates/: index.html
mamba_gator/nbextension/: common.js  main.js  tree.js  urls.js  views.js
mamba_gator/nbextension/tests/: test_notebook.py  test_notebook_basic.js
mamba_gator/tests/: conftest.py  test_actionsstack.py  test_api.py  test_e2e.py  test_manager.py  test_server_base.py  test_utils.py  utils.py
navigator/: .gitignore  README.md  environment.yml  webpack.config.js
navigator/.github/workflows/: build.yml
navigator/binder/: postBuild
navigator/server/: list_and_query.py
navigator/src/: icons.ts  index.ts
navigator/src/app/: shell.ts
navigator/src/plugins/navigator/: index.ts
navigator/src/plugins/top/: file.ts  help.ts  tokens.ts
nb_conda/: __init__.py  _version.py  envmanager.py  handlers.py  setup.py
nb_conda/nbextension/: envmanager.py  handlers.py
nb_conda/nbextension/static/: main.js  menu.html
nb_conda/static/: common.js  main.js  models.js  tree.js  urls.js  views.js
nb_conda/tests/: test_api.py  test_notebook.py
nb_conda/tests/js/: _utils.js  test_notebook_basic.js
scripts/: bump_version.py
server/: list_and_query.py
src/: App.vue
src/components/: Channels.vue  Header.vue  HelloWorld.vue  Network.vue
src/json/: env_list.json  req_1.json  req_2.json  req_3.json
