[build-system]
requires = [
    "hatchling>=1.9.0",
    "jupyterlab>=4.0.0,<5.0.0",
    "jupyter-server",
]
build-backend = "hatchling.build"

[project]
name = "mamba_gator"
version = "6.1.0"
readme = "README.md"
authors = [
    { name = "Continuum Analytics" },
    { name = "Jupyter Development Team" },
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "jupyterlab>=4.0.0,<5.0.0",
    "jupyter_client",
    "jupyter_server>=2.0.0,<3.0.0",
    "jupyterlab_server>=2.0.0,<3.0.0",
    "packaging",
    "tornado",
    "traitlets",
    "pip"
]
description = "Manage your conda environments"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "hatch"
]
test = [
    "coverage",
    "flake8",
    "pytest",
    "pytest-jupyter[server]>=0.11.0",
]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "myst_parser",
    "linkify-it-py",
    "sphinx-design"
]

[project.scripts]
gator = "mamba_gator.navigator.main:main"

[tool.hatch.build]
artifacts = [
    "mamba_gator/navigator/static/**",
    "mamba_gator/labextension/**",
    "mamba_gator/nbextension/static/**",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config/jupyter_server_config.d/mamba_gator.json" = "etc/jupyter/jupyter_server_config.d/mamba_gator.json"
"mamba_gator/labextension" = "share/jupyter/labextensions/@mamba-org/gator-lab"
"./install.json" = "share/jupyter/labextensions/@mamba-org/gator-lab/install.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.version]
path = "mamba_gator/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
skip_npm_install = true
skip-if-exists = ["mamba_gator/labextension/static/style.js"]
path = "packages/labextension"
dependencies = [
    "hatch-jupyter-builder",
]
ensured-targets = [
  "mamba_gator/labextension/static/style.js",
  "mamba_gator/labextension/package.json",
]
build-function = "hatch_jupyter_builder.npm_builder"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]

[tool.tbump.version]
current = "6.1.0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""

[[tool.tbump.file]]
src = "package.json"
search = '"version": "{current_version}"'

[tool.hatch.envs.lint]
skip-install = true
dependencies = ["flake8"]

[tool.hatch.envs.lint.scripts]
check = "flake8 mamba_gator"


[tool.pytest.ini_options]
addopts = "--rootdir=mamba_gator --strict-markers"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]
show_missing = true
